[package]
name = "pong"
version = "0.1.0"
authors = ["Karahan Buhan <contact@karahanbuhan.com>"]
edition = "2021"
description = "The classic pong game"
readme = "https://github.com/karahanbuhan/pong/blob/master/README.md"
repository = "https://github.com/karahanbuhan/pong"
license = "MIT License"

[dependencies]
bevy = "0.9.0"
rand = "0.8.5"

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3